@@ -28,10 +28,15 @@ public class ScoreManagement implements Listener {
 
 		Main.plugin.getConfig().getStringList("autoPurge").forEach(str -> {
 			String[] split = str.split(":");
-			Date temp = new Date(Integer.parseInt(split[0]), Integer.parseInt(split[1]));
-			purges.add(temp);
-			if (nextPurge == -1 && temp.isAfterNow()) {
-				nextPurge = purges.indexOf(temp);
+			if (split.length < 2) {
+				Bukkit.getLogger().severe("The autopurge value " + str
+						+ " is not of the correct format, it should be of the format 'dateofMonth:hour', if your format looks like this, make sure you have surrounded the message in single quotes (ie - '1:6')");
+			} else {
+				Date temp = new Date(Integer.parseInt(split[0]), Integer.parseInt(split[1]));
+				purges.add(temp);
+				if (nextPurge == -1 && temp.isAfterNow()) {
+					nextPurge = purges.indexOf(temp);
+				}
 			}
 
 		});
